--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/derrick-long/find_a_game#readme",
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "express": "^4.16.3",
+    "mongoose": "^5.0.12",
     "nodemon": "^1.17.2",
     "npm": "^5.8.0"
   }
