add and test ejs view engine

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/derrick-long/find_a_game#readme",
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "ejs": "^2.5.8",
     "express": "^4.16.3",
     "mongoose": "^5.0.12",
     "nodemon": "^1.17.2",
