add layouts to ejs

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.0.0",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "express-ejs-layouts": "^2.4.0",
     "mongoose": "^5.0.12",
     "nodemon": "^1.17.2",
     "npm": "^5.8.0"
