--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-ejs-layouts": "^2.4.0",
     "mongoose": "^5.0.12",
     "nodemon": "^1.17.2",
-    "npm": "^5.8.0"
+    "npm": "^5.8.0",
+    "path": "^0.12.7"
   }
 }
