--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "bootstrap-star-rating": "^4.0.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "express-ejs-layouts": "^2.4.0",
     "express-session": "^1.15.6",
+    "jquery": "^3.3.1",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.12",
     "nodemon": "^1.17.3",
