--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "npm": "^5.8.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pluralize": "^7.0.0"
   }
 }
