--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.3.1",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.12",
+    "node-geocoder": "^3.22.0",
     "nodemon": "^1.18.3",
     "npm": "^5.10.0",
     "passport": "^0.4.0",
