--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bootstrap-rating-input": "^0.4.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
-    "dateformat": "^3.0.3",
+    "dateformat": "3.0.3",
     "ejs": "^2.5.8",
     "ejs-lint": "^0.3.0",
     "express": "^4.16.3",
