--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An application for finding tabletop games/ players for your games",
   "main": "app.js",
   "engines": {
-    "node": "11.1.0"
+    "node": "11.1.0",
+    "npm": "6.4.1"
   },
   "scripts": {
     "start": "node app.js"
