--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dateformat": "3.0.3",
     "ejs": "^2.5.8",
     "ejs-lint": "^0.3.0",
+    "event-stream": "^4.0.1",
     "express": "^4.16.3",
     "express-ejs-layouts": "^2.4.0",
     "express-session": "^1.15.6",
